--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ background-color: #131313; ">
         // 按钮跳转功能
         document.getElementById('mainButton').addEventListener('click', function() {
             const buttonText = this.textContent.trim();
-            console.log(`跳转到: ${buttonText} 页面`);
+             window.location.href = 'https://20232027guoke.wordpress.com/';
             
             // 模拟跳转效果
             this.innerHTML = '<i class="fa fa-spinner fa-spin mr-2"></i> 正在启动果壳...';
